[gd_scene load_steps=5 format=3 uid="uid://bvalbt75lr1jn"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_s0j6e"]
[ext_resource type="Theme" uid="uid://q6cmt5cpvq2" path="res://themes/buton.tres" id="1_ypn5x"]
[ext_resource type="Texture2D" uid="uid://c26mh7bdfup6b" path="res://sprites/PXL_20241009_030944919.jpg" id="3_wph67"]

[sub_resource type="Theme" id="Theme_85250"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ypn5x")
script = ExtResource("1_s0j6e")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 4032.0
offset_bottom = 2268.0
scale = Vector2(0.285758, 0.287126)
texture = ExtResource("3_wph67")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 298.0
offset_top = 84.0
offset_right = 338.0
offset_bottom = 124.0
scale = Vector2(13.0122, 2.0433)

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 157.0
offset_top = 74.0
offset_right = 948.0
offset_bottom = 181.0
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[center]Midnight Wish[/center]"

[node name="Play" type="Button" parent="."]
layout_mode = 2
offset_left = 421.0
offset_top = 302.0
offset_right = 704.0
offset_bottom = 333.0
text = "Play"

[node name="Sound" type="Button" parent="."]
layout_mode = 2
offset_left = 422.0
offset_top = 339.0
offset_right = 705.0
offset_bottom = 370.0
theme = SubResource("Theme_85250")
text = "Sound"

[node name="HowToPlay" type="Button" parent="."]
layout_mode = 2
offset_left = 423.0
offset_top = 376.0
offset_right = 706.0
offset_bottom = 407.0
theme = SubResource("Theme_85250")
text = "How to play"

[node name="Quit" type="Button" parent="."]
layout_mode = 2
offset_left = 424.0
offset_top = 412.0
offset_right = 694.0
offset_bottom = 440.0
scale = Vector2(1.03884, 1.04939)
text = "Quit"

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Sound" to="." method="_on_sound_pressed"]
[connection signal="pressed" from="HowToPlay" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
